--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,8 +1,11 @@
 vich_uploader:
     db_driver: orm
 
+    metadata:
+        type: attribute
+
     mappings:
-        products:
-            #uri_prefix: /images/products
-            upload_destination: '%kernel.project_dir%/public'
+        albums:
+            uri_prefix: /images/albums
+            upload_destination: '%kernel.project_dir%/public/images/albums'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
