--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -9,3 +9,8 @@ vich_uploader:
             uri_prefix: /images/albums
             upload_destination: '%kernel.project_dir%/public/images/albums'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+        bands:
+            uri_prefix: /images/bands
+            upload_destination: '%kernel.project_dir%/public/images/bands'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
